--- a/vislearn/pista/model.ipynb
+++ b/vislearn/pista/model.ipynb
@@ -33,7 +33,10 @@
     }
    ],
    "source": [
-    "#"
+    "#get data directory\n",
+    "import os\n",
+    "import sys\n",
+    "\n"
    ]
   },
   {
