--- a/czek.ipynb
+++ b/czek.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,70 @@
     "    # For example, use the first GPU\n",
     "if gpus:\n",
     "    tf.config.experimental.set_visible_devices(gpus[0], 'GPU')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuda_available = torch.cuda.is_available()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if cuda_available:\n",
+    "    gpu_count = torch.cuda.device_count()\n",
+    "    gpu_names = [torch.cuda.get_device_name(i) for i in range(gpu_count)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA (GPU) is available.\n",
+      "Number of GPUs: 1\n",
+      "GPU 0: NVIDIA GeForce RTX 4060 Ti\n"
+     ]
+    }
+   ],
+   "source": [
+    "if cuda_available:\n",
+    "    print(\"CUDA (GPU) is available.\")\n",
+    "    print(f\"Number of GPUs: {gpu_count}\")\n",
+    "    for i, name in enumerate(gpu_names):\n",
+    "        print(f\"GPU {i}: {name}\")\n",
+    "else:\n",
+    "    print(\"CUDA (GPU) is not available.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor on GPU: cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "if cuda_available:\n",
+    "    tensor_on_gpu = torch.tensor([1.0]).cuda()\n",
+    "    print(\"Tensor on GPU:\", tensor_on_gpu.device)\n"
    ]
   },
   {
