--- a/vislearn/pista/model.ipynb
+++ b/vislearn/pista/model.ipynb
@@ -33,10 +33,7 @@
     }
    ],
    "source": [
-    "#get data directory\n",
-    "import os\n",
-    "import sys\n",
-    "\n"
+    "#get data directory\n"
    ]
   },
   {
