--- a/vislearn/fish/model2.ipynb
+++ b/vislearn/fish/model2.ipynb
@@ -280,37 +280,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create data loaders for training and validation datasets\n",
+    "data_transforms = {\n",
+    "    'train': transforms.Compose([\n",
+    "        transforms.RandomResizedCrop(224),\n",
+    "        transforms.RandomHorizontalFlip(),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "    ]),\n",
+    "    'val': transforms.Compose([\n",
+    "        transforms.Resize(256),\n",
+    "        transforms.CenterCrop(224),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "    ])\n",
+    "}\n",
+    "\n",
     "#creating the dataloaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=0)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=0)\n"
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'to'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 26\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch_idx, (data, target) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(train_loader):\n\u001b[0;32m     25\u001b[0m     data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mto(device)  \u001b[38;5;66;03m# Move data to the GPU\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m     target \u001b[38;5;241m=\u001b[39m \u001b[43mtarget\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m(device)  \u001b[38;5;66;03m# Move target to the GPU separately\u001b[39;00m\n\u001b[0;32m     27\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m     28\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m model(data)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'to'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "val_dataset = FishDataset(test_df, test_transform)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torchvision\n",
     "import matplotlib.pyplot as plt\n",
+    "import copy\n",
     "\n",
     "# Check for the availability of CUDA (GPU)\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -324,30 +339,120 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# Training the model\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# Train the model for multiple epochs\n",
     "num_epochs = 10\n",
-    "losses = []\n",
+    "best_model_wts = copy.deepcopy(model.state_dict())\n",
+    "best_acc = 0.0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the model architecture\n",
+    "from torchvision import models\n",
+    "model = models.resnet18(pretrained=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "----------\n",
+      "<class 'tuple'>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'to'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m inputs, labels \u001b[38;5;129;01min\u001b[39;00m train_loader:\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(labels))\n\u001b[1;32m---> 20\u001b[0m     labels \u001b[38;5;241m=\u001b[39m \u001b[43mlabels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m(device)\n\u001b[0;32m     21\u001b[0m     inputs \u001b[38;5;241m=\u001b[39m inputs\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m     22\u001b[0m     labels \u001b[38;5;241m=\u001b[39m labels\u001b[38;5;241m.\u001b[39mto(device)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'to'"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# Train the model for multiple epochs\n",
+    "num_epochs = 10\n",
+    "best_model_wts = copy.deepcopy(model.state_dict())\n",
+    "best_acc = 0.0\n",
     "\n",
     "for epoch in range(num_epochs):\n",
-    "    train_loss = 0\n",
-    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "        data = data.to(device)  # Move data to the GPU\n",
-    "        target = target.to(device)  # Move target to the GPU\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(data)\n",
-    "        loss = criterion(outputs, target)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        train_loss += loss.item()\n",
-    "    losses.append(train_loss / len(train_loader))\n",
-    "    print(f\"Epoch : {epoch + 1} \\t Loss : {train_loss / len(train_loader)}\")\n",
+    "    print(f'Epoch {epoch+1}/{num_epochs}')\n",
+    "    print('-' * 10)\n",
     "\n",
-    "# Plotting the losses\n",
-    "plt.plot(losses)\n",
-    "plt.title('Training Loss Curve')\n",
-    "plt.xlabel('Epochs')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.show()\n"
+    "    # Training phase\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "    running_corrects = 0\n",
+    "\n",
+    "    for inputs, labels in train_loader:\n",
+    "        print(type(labels))\n",
+    "        labels = labels.to(device)\n",
+    "        inputs = inputs.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        with torch.set_grad_enabled(True):\n",
+    "            outputs = model(inputs.to(device))  # Ensure inputs are on the same device as the model\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "        running_loss += loss.item() * inputs.size(0)\n",
+    "        running_corrects += torch.sum(preds == labels.data)\n",
+    "\n",
+    "    epoch_loss = running_loss / len(train_dataset)\n",
+    "    epoch_acc = running_corrects.double() / len(train_dataset)\n",
+    "\n",
+    "    print(f'Train Loss: {epoch_loss:.4f} Acc: {epoch_acc:.4f}')\n",
+    "\n",
+    "    # Validation phase\n",
+    "    model.eval()\n",
+    "    running_loss = 0.0\n",
+    "    running_corrects = 0\n",
+    "\n",
+    "    for inputs, labels in val_loader:\n",
+    "        inputs = inputs.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "\n",
+    "        with torch.set_grad_enabled(False):\n",
+    "            outputs = model(inputs.to(device))  # Ensure inputs are on the same device as the model\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "\n",
+    "        running_loss += loss.item() * inputs.size(0)\n",
+    "        running_corrects += torch.sum(preds == labels.data)\n",
+    "\n",
+    "    epoch_loss = running_loss / len(val_dataset)\n",
+    "    epoch_acc = running_corrects.double() / len(val_dataset)\n",
+    "\n",
+    "    print(f'Val Loss: {epoch_loss:.4f} Acc: {epoch_acc:.4f}')\n",
+    "\n",
+    "    # Save the best model\n",
+    "    if epoch_acc > best_acc:\n",
+    "        best_acc = epoch_acc\n",
+    "        best_model_wts = copy.deepcopy(model.state_dict())"
    ]
   },
   {
