--- a/vislearn/fish/model.ipynb
+++ b/vislearn/fish/model.ipynb
@@ -2,22 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['dataset', 'Fish_Dataset', 'model.ipynb', 'model2.ipynb']"
+       "['Black Sea Sprat',\n",
+       " 'Gilt-Head Bream',\n",
+       " 'Hourse Mackerel',\n",
+       " 'license.txt',\n",
+       " 'README.txt',\n",
+       " 'Red Mullet',\n",
+       " 'Red Sea Bream',\n",
+       " 'Sea Bass',\n",
+       " 'Segmentation_example_script.m',\n",
+       " 'Shrimp',\n",
+       " 'Striped Red Mullet',\n",
+       " 'Trout']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dir = 'C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish'\n",
+    "data_dir = 'C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\'\n",
     "#show folder names\n",
     "import os\n",
     "os.listdir(data_dir)"
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,20 +62,35 @@
     "print(\"Black Sea Sprat mask files:\")\n",
     "print(black_sea_sprat_mask_files)\n",
     "#Gilt-Head Bream\n",
+    "gilthead_bream_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Gilt-Head Bream\\\\Gilt-Head Bream\"\n",
+    "gilthead_bream_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Gilt-Head Bream\\\\Gilt-Head Bream GT\"\n",
     "#Hourse Mackerel\n",
+    "horse_mackerel_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Hourse Mackerel\\\\Hourse Mackerel\"\n",
+    "horse_mackerel_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Hourse Mackerel\\\\Hourse Mackerel GT\"\n",
     "#Red Mullet\n",
+    "red_mullet_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Red Mullet\\\\Red Mullet\"\n",
+    "red_mullet_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Red Mullet\\\\Red Mullet GT\"\n",
     "#Red Sea Bream\n",
+    "red_sea_bream_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Red Sea Bream\\\\Red Sea Bream\"\n",
+    "red_sea_bream_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Red Sea Bream\\\\Red Sea Bream GT\"\n",
     "#Sea Bass\n",
+    "sea_bass_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Sea Bass\\\\Sea Bass\"\n",
+    "sea_bass_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Sea Bass\\\\Sea Bass GT\"\n",
     "#Shrimp\n",
+    "shrimp_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Shrimp\\\\Shrimp\"\n",
+    "shrimp_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Shrimp\\\\Shrimp GT\"\n",
     "#Striped Red Mullet\n",
+    "striped_red_mullet_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Striped Red Mullet\\\\Striped Red Mullet\"\n",
+    "striped_red_mullet_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Striped Red Mullet\\\\Striped Red Mullet GT\"\n",
     "#Trout\n",
-    "#list all files in the folders above\n",
+    "trout_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Trout\\\\Trout\"\n",
+    "trout_mask_dir = \"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\Trout\\\\Trout GT\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -75,16 +101,7 @@
      ]
     }
    ],
-   "source": [
-    "#all of the images\n",
-    "import glob\n",
-    "images = glob.glob(\"C:\\\\projects\\\\all-projects\\\\vislearn\\\\fish\\\\Fish_Dataset\\\\*\\\\*.png\")\n",
-    "#number of images\n",
-    "import pandas as pd\n",
-    "print(\"Number of images: \", len(images))\n",
-    "\n",
-    "images = pd.Series(images)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
