--- a/vislearn/fish/model.ipynb
+++ b/vislearn/fish/model.ipynb
@@ -376,6 +376,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fish\n",
+       "Black Sea Sprat mask       1000\n",
+       "Gilt-Head Bream mask       1000\n",
+       "Hourse Mackerel mask       1000\n",
+       "Red Mullet mask            1000\n",
+       "Red Sea Bream mask         1000\n",
+       "Sea Bass mask              1000\n",
+       "Shrimp mask                1000\n",
+       "Striped Red Mullet mask    1000\n",
+       "Trout mask                 1000\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#show the number of images for each fish species\n",
+    "fish_df[\"fish\"].value_counts()\n",
+    "\n",
+    "fish_mask_df[\"fish\"].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
