--- a/vislearn/fish/model.ipynb
+++ b/vislearn/fish/model.ipynb
@@ -376,7 +376,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fish\n",
+       "Black Sea Sprat       1000\n",
+       "Gilt-Head Bream       1000\n",
+       "Hourse Mackerel       1000\n",
+       "Red Mullet            1000\n",
+       "Red Sea Bream         1000\n",
+       "Sea Bass              1000\n",
+       "Shrimp                1000\n",
+       "Striped Red Mullet    1000\n",
+       "Trout                 1000\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#show the number of images for each fish species\n",
+    "fish_df[\"fish\"].value_counts()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -395,24 +427,14 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#show the number of images for each fish species\n",
-    "fish_df[\"fish\"].value_counts()\n",
-    "\n",
-    "fish_mask_df[\"fish\"].value_counts()\n"
+    "fish_mask_df[\"fish\"].value_counts()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
