--- a/vislearn/fish/model.ipynb
+++ b/vislearn/fish/model.ipynb
@@ -882,6 +882,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the best model weights\n",
+    "model.load_state_dict(best_model_wts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "torch.save(model.state_dict(), 'model.pth')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
