--- a/czek.ipynb
+++ b/czek.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
      "text": [
       "CUDA (GPU) is available.\n",
       "Number of GPUs: 1\n",
-      "GPU 0: NVIDIA GeForce RTX 4060 Ti\n"
+      "GPU 0: NVIDIA GeForce RTX 4080 SUPER\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,10 +116,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU time: 3.6181485652923584\n",
+      "GPU time: 0.6258425712585449\n",
+      "Speedup: 5.78x\n"
+     ]
+    }
+   ],
+   "source": [
+    "#quick benchmark of CPU vs GPU\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "# CPU\n",
+    "start_time = time.time()\n",
+    "a = np.random.rand(10000, 10000)\n",
+    "b = np.random.rand(10000, 10000)\n",
+    "np.dot(a, b)\n",
+    "end_time = time.time()\n",
+    "cpu_time = end_time - start_time\n",
+    "\n",
+    "# GPU\n",
+    "start_time = time.time()\n",
+    "a = torch.rand(10000, 10000).cuda()\n",
+    "b = torch.rand(10000, 10000).cuda()\n",
+    "torch.matmul(a, b)\n",
+    "end_time = time.time()\n",
+    "gpu_time = end_time - start_time\n",
+    "\n",
+    "print(f\"CPU time: {cpu_time}\")\n",
+    "print(f\"GPU time: {gpu_time}\")\n",
+    "print(f\"Speedup: {cpu_time / gpu_time:.2f}x\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
