--- a/czek.ipynb
+++ b/czek.ipynb
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No GPU devices found.\n"
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
    ],
@@ -36,18 +36,7 @@
     "#check if tensorflow is installed and runs on GPU\n",
     "import tensorflow as tf\n",
     "\n",
-    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
-    "\n",
-    "if gpus:\n",
-    "    for gpu in gpus:\n",
-    "        print(\"Device name:\", gpu.name)\n",
-    "        print(\"Device type:\", gpu.device_type)\n",
-    "else:\n",
-    "    print(\"No GPU devices found.\")\n",
-    "\n",
-    "    # For example, use the first GPU\n",
-    "if gpus:\n",
-    "    tf.config.experimental.set_visible_devices(gpus[0], 'GPU')"
+    "print(tf.config.list_physical_devices('GPU'))"
    ]
   },
   {
@@ -123,9 +112,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU time: 3.6181485652923584\n",
-      "GPU time: 0.6258425712585449\n",
-      "Speedup: 5.78x\n"
+      "CPU time: 3.600888967514038\n",
+      "GPU time: 0.6375110149383545\n",
+      "Speedup: 5.65x\n"
      ]
     }
    ],
@@ -155,6 +144,118 @@
     "print(f\"Speedup: {cpu_time / gpu_time:.2f}x\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU time: 1.780914068222046\n",
+      "GPU time: 0.5422227382659912\n"
+     ]
+    }
+   ],
+   "source": [
+    "#benchmark of CPU vs GPU with PyTorch\n",
+    "import time\n",
+    "import torch\n",
+    "\n",
+    "# CPU\n",
+    "start_time = time.time()\n",
+    "a = torch.rand(10000, 10000)\n",
+    "b = torch.rand(10000, 10000)\n",
+    "torch.matmul(a, b)\n",
+    "end_time = time.time()\n",
+    "cpu_time = end_time - start_time\n",
+    "\n",
+    "# GPU\n",
+    "start_time = time.time()\n",
+    "a = torch.rand(10000, 10000).cuda()\n",
+    "b = torch.rand(10000, 10000).cuda()\n",
+    "torch.matmul(a, b)\n",
+    "end_time = time.time()\n",
+    "gpu_time = end_time - start_time\n",
+    "\n",
+    "print(f\"CPU time: {cpu_time}\")\n",
+    "print(f\"GPU time: {gpu_time}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Benchmarking on CPU...\n",
+      "Average CPU time for 10 runs: 0.006523 seconds\n",
+      "\n",
+      "Benchmarking on GPU...\n",
+      "Average GPU time for 10 runs: 0.000100 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import time\n",
+    "\n",
+    "# Define a simple TensorFlow operation\n",
+    "def matrix_multiplication(size):\n",
+    "    A = tf.random.uniform([size, size], dtype=tf.float32)\n",
+    "    B = tf.random.uniform([size, size], dtype=tf.float32)\n",
+    "    return tf.matmul(A, B)\n",
+    "\n",
+    "# Function to benchmark on CPU\n",
+    "def benchmark_cpu(size, num_runs=10):\n",
+    "    with tf.device('/CPU:0'):\n",
+    "        # Warm-up run\n",
+    "        matrix_multiplication(size)\n",
+    "        \n",
+    "        # Timing runs\n",
+    "        start_time = time.time()\n",
+    "        for _ in range(num_runs):\n",
+    "            result = matrix_multiplication(size)\n",
+    "        end_time = time.time()\n",
+    "        \n",
+    "    avg_time = (end_time - start_time) / num_runs\n",
+    "    print(f\"Average CPU time for {num_runs} runs: {avg_time:.6f} seconds\")\n",
+    "\n",
+    "# Function to benchmark on GPU\n",
+    "def benchmark_gpu(size, num_runs=10):\n",
+    "    if len(tf.config.list_physical_devices('GPU')) == 0:\n",
+    "        print(\"No GPU available.\")\n",
+    "        return\n",
+    "    \n",
+    "    with tf.device('/GPU:0'):\n",
+    "        # Warm-up run\n",
+    "        matrix_multiplication(size)\n",
+    "        \n",
+    "        # Timing runs\n",
+    "        start_time = time.time()\n",
+    "        for _ in range(num_runs):\n",
+    "            result = matrix_multiplication(size)\n",
+    "        end_time = time.time()\n",
+    "        \n",
+    "    avg_time = (end_time - start_time) / num_runs\n",
+    "    print(f\"Average GPU time for {num_runs} runs: {avg_time:.6f} seconds\")\n",
+    "\n",
+    "# Set the matrix size and number of runs\n",
+    "matrix_size = 1000\n",
+    "num_runs = 10\n",
+    "\n",
+    "# Run the benchmarks\n",
+    "print(\"Benchmarking on CPU...\")\n",
+    "benchmark_cpu(matrix_size, num_runs)\n",
+    "\n",
+    "print(\"\\nBenchmarking on GPU...\")\n",
+    "benchmark_gpu(matrix_size, num_runs)\n"
+   ]
   }
  ],
  "metadata": {
@@ -173,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
